# Jigeop-Kit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: apply.md  cover-letter.md  setup.md  tailor.md
jobs/: _template.md
profile/: resume.yaml.example  style.md.example
scripts/: clone_repos.py  fetch_github.py  ingest.py  pdf_to_text.py  render.py  select_items.py
templates/: cover_letter.tex.j2  jinja_env.py  resume.tex.j2
