[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-application-workspace"
version = "0.1.0"
description = "Claude Code job application workspace"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.23",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "questionary>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["templates"]
